--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
       "name": "Vojtěch Kusý",
       "homepage": "http://www.vojtechkusy.com"
     }
-  ]
+  ],
+  "autoload": {
+      "files": ["php-initialized.inc.php"]
+  }
 }
